# python-pptx-vba

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg  tests.py
blank/docProps/: app.xml  core.xml
blank/ppt/slideLayouts/: slideLayout1.xml  slideLayout10.xml  slideLayout11.xml  slideLayout2.xml  slideLayout3.xml  slideLayout4.xml  slideLayout5.xml  slideLayout6.xml  slideLayout7.xml  slideLayout8.xml  slideLayout9.xml
blank/ppt/slideMasters/: slideMaster1.xml
blank/ppt/slides/: slide1.xml
docs/: conf.py  index.rst
src/ppv/: __init__.py
src/ppv/core/: base.py  collection.py  imagetypeobj.py  package.py  parser.py  xmltypeobj.py
src/ppv/data/: gf_chart.xml  picture.xml  textbox.xml
src/ppv/dml/: axis.py  axistitle.py  cell.py  cellrange.py  chart.py  chartarea.py  chartdata.py  chartformat.py  chartspace.py  charttitle.py  colorformat.py  column.py  columns.py  connectorformat.py  datalabel.py  datalabels.py  datatable.py  fillformat.py  font.py  font2.py  freeformbuilder.py  gridlines.py  legend.py  lineformat.py  pictureformat.py  (+13 more)
tests/: conftest.py  test_ppv.py
tests/core/: test_package.py  test_parser.py
tests/data/: allinone.pptx  saved.pptx  shapes.pptx
tests/dml/: test_cell.py  test_column.py  test_columns.py  test_font.py  test_font2.py  test_row.py  test_rows.py  test_table.py  test_textrange.py  test_textrange2.py
tests/pml/: test_application.py  test_customlayouts.py  test_master.py  test_presentation.py  test_presentations.py  test_shape.py  test_shapes.py  test_slide.py  test_slides.py  test_textframe.py  test_textframe2.py
(+194 files in other folders)
