[metadata]
name = python-pptx-vba
version = attr: ppv.__version__
description = VBA like Python library for Powerpoint pptx files
long_description = file: README.md
long_description_content_type = text/markdown
url = 
author = Karim S (Kas)
author_email = kascodeo@gmail.com
license = MIT
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.11
keywords = pptx, python, vba, powerpoint, microsoft, office
project_urls =
    Documentation=https://python-pptx-vba.readthedocs.io/
    Source=https://github.com/kascodeo/python-pptx-vba
    Release notes=https://python-pptx-vba.readthedocs.io/en/stable/releasenotes.html
    
[options]
packages = ppv
python_requires = >=3
include_package_data = False
package_dir =
    = src
install_requires =
    python-opc-lite
    lxml
    pillow

[options.extras_require]
docs =
    furo
    sphinx
    sphinx-copybutton
    sphinx-inline-tabs
    sphinx-removed-in
    sphinxext-opengraph

tests =
    pytest
    tox

dists = 
    twine
    build

[options.packages.find]
exclude =
    tests*
    docs*

[flake8]
per-file-ignores =
    */__init__.py: F401
    
[isort]
profile = black

[tool:pytest]
addopts = -ra --color=yes
testpaths = tests

